// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CWidgetHeaderDetails matches custom props snapshot 1`] = `
<div
  class="card bg-info"
>
  <div
    class="card-header"
  >
    <div
      class="font-weight-bold"
    >
      <span>
        rightHeader
      </span>
       
      <span
        class="float-right"
      >
        leftHeader
      </span>
    </div>
     
    <div>
      <span>
        <small>
          rightFooter
        </small>
      </span>
       
      <span
        class="float-right"
      >
        <small>
          leftFooter
        </small>
      </span>
    </div>
     
  </div>
</div>
`;

exports[`CWidgetHeaderDetails matches default props snapshot 1`] = `
<div
  class="card bg-undefined"
>
  <div
    class="card-header"
  >
    <div
      class="font-weight-bold"
    >
      <!---->
       
      <!---->
    </div>
     
    <div>
      <span>
        <!---->
      </span>
       
      <span
        class="float-right"
      >
        <!---->
      </span>
    </div>
     
  </div>
</div>
`;
